; ModuleID = '/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_XzEnc.c_XzEncIndex_AddIndexRecord.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_XzEnc.c_XzEncIndex_AddIndexRecord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@SZ_ERROR_MEM = common dso_local global i32 0, align 4
@SZ_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32, i32, i32)* @XzEncIndex_AddIndexRecord to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @XzEncIndex_AddIndexRecord(%struct.TYPE_4__* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [32 x i32], align 16
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %13 = getelementptr inbounds [32 x i32], [32 x i32]* %10, i64 0, i64 0
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @Xz_WriteVarInt(i32* %13, i32 %14)
  store i32 %15, i32* %11, align 4
  %16 = getelementptr inbounds [32 x i32], [32 x i32]* %10, i64 0, i64 0
  %17 = load i32, i32* %11, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @Xz_WriteVarInt(i32* %19, i32 %20)
  %22 = load i32, i32* %11, align 4
  %23 = add i32 %22, %21
  store i32 %23, i32* %11, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = sub i32 %27, %30
  %32 = icmp ugt i32 %24, %31
  br i1 %32, label %33, label %56

33:                                               ; preds = %4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = mul i32 %36, 2
  %38 = add i32 %37, 32
  %39 = zext i32 %38 to i64
  store i64 %39, i64* %12, align 8
  %40 = load i64, i64* %12, align 8
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* %11, align 4
  %45 = add i32 %43, %44
  %46 = zext i32 %45 to i64
  %47 = icmp ult i64 %40, %46
  br i1 %47, label %48, label %50

48:                                               ; preds = %33
  %49 = load i32, i32* @SZ_ERROR_MEM, align 4
  store i32 %49, i32* %5, align 4
  br label %77

50:                                               ; preds = %33
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %52 = load i64, i64* %12, align 8
  %53 = load i32, i32* %9, align 4
  %54 = call i32 @XzEncIndex_ReAlloc(%struct.TYPE_4__* %51, i64 %52, i32 %53)
  %55 = call i32 @RINOK(i32 %54)
  br label %56

56:                                               ; preds = %50, %4
  %57 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %57, i32 0, i32 2
  %59 = load i32, i32* %58, align 4
  %60 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %61 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 4
  %63 = add i32 %59, %62
  %64 = getelementptr inbounds [32 x i32], [32 x i32]* %10, i64 0, i64 0
  %65 = load i32, i32* %11, align 4
  %66 = call i32 @memcpy(i32 %63, i32* %64, i32 %65)
  %67 = load i32, i32* %11, align 4
  %68 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %69 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %68, i32 0, i32 1
  %70 = load i32, i32* %69, align 4
  %71 = add i32 %70, %67
  store i32 %71, i32* %69, align 4
  %72 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %73 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %72, i32 0, i32 3
  %74 = load i32, i32* %73, align 4
  %75 = add nsw i32 %74, 1
  store i32 %75, i32* %73, align 4
  %76 = load i32, i32* @SZ_OK, align 4
  store i32 %76, i32* %5, align 4
  br label %77

77:                                               ; preds = %56, %48
  %78 = load i32, i32* %5, align 4
  ret i32 %78
}

declare dso_local i32 @Xz_WriteVarInt(i32*, i32) #1

declare dso_local i32 @RINOK(i32) #1

declare dso_local i32 @XzEncIndex_ReAlloc(%struct.TYPE_4__*, i64, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
